--- a/public/main.html
+++ b/public/main.html
@@ -53,16 +53,13 @@
 	<div class="flex-container">
 		<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs" id="menu-tabs">
 			<li class="tabs-title is-active" role="presentation">
-				<a href="#menuAppetizers" role="tab">Appetizers</a>
+				<a href="#menuSandwiches" role="tab">Sandwiches</a>
 			</li>
 			<li class="tabs-title" role="presentation">
 				<a href="#menuBurgers" role="tab">Burgers</a>
 			</li>
 			<li class="tabs-title" role="presentation">
 				<a href="#menuSalads" role="tab">Salads</a>
-			</li>
-			<li class="tabs-title" role="presentation">
-				<a href="#menuSoftServe" role="tab">Soft-Serve</a>
 			</li>
 			<li class="tabs-title" role="presentation">
 				<a href="#menuDrinks" role="tab">Drinks</a>
@@ -72,35 +69,33 @@
 
 	<div class="tabs-content menuItem-container" data-tabs-content="menu-tabs">
 
-		<!-- Appetizers Menu -->
-		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
-			<div class="flex-container ">
-			</div>
-		</div>
-
-		<!-- Burgers Menu -->
-		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
-			<div class="flex-container ">
-			</div>
-		</div>
-
-		<!-- Salads Menu -->
-		<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
-			<div class="flex-container ">
-			</div>
-		</div>
-
-		<!-- Ice Cream Menu -->
-		<div class="tabs-panel" data-menu-items="icecream" id="menuSoftServe">
-			<div class="flex-container ">
-			</div>
-		</div>
-
-		<!-- Drinks Menu -->
-		<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
-			<div class="flex-container ">
-			</div>
-		</div>
+				<!-- Sandwich Menu -->
+				<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
+					<div class="flex-container" id="sandwichItem">
+						<!-- Sandwich Items Added Jquery-->
+					</div>
+				</div>
+		
+				<!-- Burgers Menu -->
+				<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
+					<div class="flex-container" id="burgerItem">
+						<!-- Burgers Items Added Jquery-->
+					</div>
+				</div>
+		
+				<!-- Salads Menu -->
+				<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
+					<div class="flex-container" id="saladItem">
+						<!-- Salads Items Added Jquery-->
+					</div>
+				</div>
+		
+				<!-- Drinks Menu -->
+				<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
+					<div class="flex-container" id="drinkItem">
+						<!-- Drink Items Added Jquery-->
+					</div>
+				</div>
 	</div>
 
 	<!-- Login Modal -->
