logout button on admin side given api-routes and changed admin.html to reflect

--- a/public/admin.html
+++ b/public/admin.html
@@ -37,7 +37,7 @@
 		</div>
 		<div class="top-bar-right">
 			<ul class="dropdown menu" data-dropdown-menu>
-				<li><button type="button" class="button secondary">Logout</button></li>
+				<li><a href="/logout">Logout</a></li>
 				<li><button type="button" class="button" data-open="modalCart">View Orders</button></li>
 			</ul>
 		</div>
@@ -67,9 +67,7 @@
 	</div>
 
 	<div class="tabs-content" data-tabs-content="menu-tabs">
-		<div class="menuRender">
 
-		</div>
 		<!-- Sandwich Menu -->
 		<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
 			<div class="flex-container" id="sandwichItem">
