add update item functionality

--- a/public/admin.html
+++ b/public/admin.html
@@ -104,8 +104,13 @@
 				<h2>Item name:</h2>
 				<input type="text" required id="edit-item-menu">
 			</label>
-			<label>Category:
-				<input type="text" required id="edit-item-ctgy">
+			<label>Category
+				<select id="edit-item-ctgy">
+					<option value="Sandwiches">Sandwiches</option>
+					<option value="Burgers">Burgers</option>
+					<option value="Salads">Salads</option>
+					<option value="Drinks">Drinks</option>
+				</select>
 			</label>
 			<label>Description:
 				<input type="text" required id="edit-item-desc">
