commented out associations to seating and seating table

--- a/public/main.html
+++ b/public/main.html
@@ -135,11 +135,14 @@
 			<thead>
 				<tr>
 					<th>Item</th>
-					<th>Subtotal</th>
+					<th>Quantity</th>
+					<th>Price</th>
 				</tr>
 			</thead>
 			<tbody id="activeOrders-container">
-
+				<td class="cartItem"></td>
+				<td class="cartItemQuantity"></td>
+				<td class="cartItemPrice"></td>
 			</tbody>
 			<tfoot>
 				<tr class="totalAmount">
