update models to remove ItemsOrder

--- a/public/main.html
+++ b/public/main.html
@@ -37,7 +37,7 @@
 			</ul>
 		</div>
 		<div class="top-bar-right">
-			<ul class="dropdown menu" data-dropdown-menu>
+			<ul class="dropdown menu" id="seatingDropdown" data-dropdown-menu>
 				<li>
 					<label>
 						<select id="order-table">
