dynamically generate table dropdown

--- a/public/main.html
+++ b/public/main.html
@@ -38,17 +38,7 @@
 		</div>
 		<div class="top-bar-right">
 			<ul class="dropdown menu" id="seatingDropdown" data-dropdown-menu>
-				<!-- <li>
-					<label>
-						<select id="order-table">
-							<option value="null" disabled selected>Select a Table</option>
-							<option value="1">Table #1</option>
-							<option value="2">Table #2</option>
-							<option value="3">Table #3</option>
-							<option value="4">Table #4</option>
-						</select>
-					</label>
-				</li> -->
+				<!-- Dynamically added table dropdown using jQuery -->
 				<li><button type="button" class="button secondary" data-open="modalLogin">Admin Login</button></li>
 				<li><button type="button" class="button" data-open="modalCart">View Cart</button></li>
 			</ul>
