--- a/public/main.html
+++ b/public/main.html
@@ -23,6 +23,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.css">
 
+	<link rel="icon" type="image/png" href="assets/circle-ico.png">
 	<title>Circle, Not Square</title>
 </head>
 
