add to orders; retrieve from orders itemId and seatingId

--- a/public/main.html
+++ b/public/main.html
@@ -41,7 +41,7 @@
 			<ul class="dropdown menu" id="seatingDropdown" data-dropdown-menu>
 				<!-- Dynamically added table dropdown using jQuery -->
 				<li><button type="button" class="button secondary" data-open="modalLogin">Admin Login</button></li>
-				<li><button type="button" class="button" data-open="modalCart">View Cart</button></li>
+				<li><button type="button" class="button viewCart" data-open="modalCart">View Cart</button></li>
 			</ul>
 		</div>
 	</div>
