display order cart in off-canvas view

--- a/public/main.html
+++ b/public/main.html
@@ -146,8 +146,8 @@
 			</tbody>
 			<tfoot>
 				<tr class="totalAmount">
-					<td>Total: </td>
-					<td>10.00</td>
+					<td>Total: $</td>
+					<td class="cartTotal"></td>
 				</tr>
 			</tfoot>
 		</table>
