--- a/public/admin.html
+++ b/public/admin.html
@@ -51,7 +51,7 @@
 	<div class="flex-container">
 		<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs" id="menu-tabs">
 			<li class="tabs-title is-active" role="presentation">
-				<a href="#menuSandwiches" role="tab">Sandwiches</a>
+				<a href="#menuAppetizers" role="tab">Appetizers</a>
 			</li>
 			<li class="tabs-title" role="presentation">
 				<a href="#menuBurgers" role="tab">Burgers</a>
@@ -68,10 +68,10 @@
 
 	<div class="tabs-content" data-tabs-content="menu-tabs">
 
-		<!-- Sandwich Menu -->
-		<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
-			<div class="flex-container" id="adminSandwichItem">
-				<!-- Sandwich Items Added Jquery-->
+		<!-- Appetizers Menu -->
+		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
+			<div class="flex-container" id="adminAppetizerItem">
+				<!-- Appetizers Items Added Jquery-->
 			</div>
 		</div>
 
@@ -106,7 +106,7 @@
 			</label>
 			<label>Category
 				<select id="edit-item-ctgy">
-					<option value="Sandwiches">Sandwiches</option>
+					<option value="Appetizers">Appetizers</option>
 					<option value="Burgers">Burgers</option>
 					<option value="Salads">Salads</option>
 					<option value="Drinks">Drinks</option>
@@ -142,7 +142,7 @@
 			</label>
 			<label>Category
 				<select id="add-item-ctgy">
-					<option value="Sandwiches">Sandwiches</option>
+					<option value="Appetizers">Appetizers</option>
 					<option value="Burgers">Burgers</option>
 					<option value="Salads">Salads</option>
 					<option value="Drinks">Drinks</option>
