--- a/public/admin.html
+++ b/public/admin.html
@@ -70,31 +70,28 @@
 
 		<!-- Appetizers Menu -->
 		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
-			<div class="flex-container" id="adminAppetizerItem">
-				<!-- Appetizers Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="adminAppetizerItem"></div>
+			<!-- Appetizers Items Added Jquery-->
 		</div>
 
 		<!-- Burgers Menu -->
 		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
-			<div class="flex-container" id="adminBurgerItem">
-				<!-- Burgers Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="adminBurgerItem"></div>
+			<!-- Burgers Items Added Jquery-->
 		</div>
 
 		<!-- Salads Menu -->
 		<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
-			<div class="flex-container" id="adminSaladItem">
-				<!-- Salads Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="adminSaladItem"></div>
+			<!-- Salads Items Added Jquery-->
 		</div>
 
 		<!-- Drinks Menu -->
 		<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
-			<div class="flex-container" id="adminDrinkItem">
-				<!-- Drink Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="adminDrinkItem"></div>
+			<!-- Drink Items Added Jquery-->
 		</div>
+
 	</div>
 
 	<!-- Item Modal -->
