--- a/public/main.html
+++ b/public/main.html
@@ -73,31 +73,28 @@
 
 		<!-- Appetizers Menu -->
 		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
-			<div class="flex-container" id="appetizerItem">
-				<!-- Appetizers Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="appetizerItem"></div>
+			<!-- Appetizers Items Added Jquery-->
 		</div>
 
 		<!-- Burgers Menu -->
 		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
-			<div class="flex-container" id="burgerItem">
-				<!-- Burgers Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="burgerItem"></div>
+			<!-- Burgers Items Added Jquery-->
 		</div>
 
 		<!-- Salads Menu -->
 		<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
-			<div class="flex-container" id="saladItem">
-				<!-- Salads Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="saladItem"></div>
+			<!-- Salads Items Added Jquery-->
 		</div>
 
 		<!-- Drinks Menu -->
 		<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
-			<div class="flex-container" id="drinkItem">
-				<!-- Drink Items Added Jquery-->
-			</div>
+			<div class="grid-x grid-margin-x small-up-2 medium-up-4 large-up-6" id="drinkItem"></div>
+			<!-- Drink Items Added Jquery-->
 		</div>
+
 	</div>
 
 	<!-- Login Modal -->
