styling main.html main.css

--- a/public/admin.html
+++ b/public/admin.html
@@ -17,6 +17,10 @@
 		integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
 
 	<!-- CSS -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Gloria+Hallelujah&family=Luckiest+Guy&family=Neucha&family=Sigmar+One&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="css/admin.css">
 
 	<!-- Javascript -->
@@ -44,7 +48,7 @@
 	</div>
 
 	<div class="callout">
-		<h1>Welcome to Bob's Burgers menu.</h1>
+		<h1>Welcome to Bob's Burgers</h1>
 	</div>
 
 	<!-- Tab menu -->
