--- a/public/admin.html
+++ b/public/admin.html
@@ -41,8 +41,8 @@
 		</div>
 		<div class="top-bar-right">
 			<ul class="dropdown menu" data-dropdown-menu>
-				<li><a href="/logout">Logout</a></li>
-				<li><button type="button" class="button" data-open="modalCart">View Orders</button></li>
+				<li><a href="/logout">Admin Logout</a></li>
+				<!-- <li><button type="button" class="button" data-open="modalCart">View Orders</button></li> -->
 			</ul>
 		</div>
 	</div>
@@ -52,7 +52,7 @@
 	</div>
 
 	<!-- Tab menu -->
-	<div class="flex-container">
+	<div class="flex-container tabMenu">
 		<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs" id="menu-tabs">
 			<li class="tabs-title is-active" role="presentation">
 				<a href="#menuAppetizers" role="tab">Appetizers</a>
@@ -70,7 +70,7 @@
 		<button type="button" class="button" id="addItem-modal" data-open="addItemModal">Add Item</button>
 	</div>
 
-	<div class="tabs-content" data-tabs-content="menu-tabs">
+	<div class="tabs-content menuItem-container" data-tabs-content="menu-tabs">
 
 		<!-- Appetizers Menu -->
 		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
