--- a/public/main.html
+++ b/public/main.html
@@ -112,7 +112,7 @@
 					<input type="text" id="username-input" placeholder="Username">
 				</div>
 				<div class="small-12 medium-6 large-9 columns">
-					<input type="text" id="password-input" placeholder="Passord">
+					<input type="text" id="password-input" placeholder="Password">
 				</div>
 			</div>
 
